[package]
name = "chromogene"
version = "0.1.0"
authors = ["Felix Dietze <felix@beerleader.net>"]

[dependencies]
palette = "0.2"
rand = "0.3"
lazy_static = "0.1.*"

[dependencies.streaming-stats]
git = "git://github.com/BurntSushi/rust-stats"

# The release profile, used for `cargo build --release`
[profile.release]
debug = false # enable for profiling
lto = true # does not work with debugging symbols
